[project]
name = "tbongkim03_lotto"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "tbongkim03", email = "tbongkim03@gmial.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.sources]
tbongkim03-lotto2 = "tbongkim03_lotto.draw:lotto"

[tool.pdm]
distribution = true
